# youtube_clickbait

./: .coverage  README.md  main.py  pyproject.toml
src/youtube_clickbait/: cli.py  reports.py  utils.py
tests/: test_cli.py  test_reports.py  test_utils.py
