[project]
name = "youtube-clickbait"
version = "0.1.0"
description = "CLI tool to detect clickbait YouTube videos"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "tabulate>=0.9.0",
]

[project.scripts]
youtube-clickbait = "youtube_clickbait.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_clickbait"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]